stand/i386/libi386/libi386.h
@@ -91,17 +91,15 @@ extern struct devdesc	currdev;	/* our current device */
 
 /* exported devices XXX rename? */
 extern struct devsw bioscd;
-extern struct devsw biosdisk;
+extern struct devsw biosfd;
+extern struct devsw bioshd;
 extern struct devsw pxedisk;
 extern struct fs_ops pxe_fsops;
 
 int	bc_add(int biosdev);		/* Register CD booted from. */
-int	bc_getdev(struct i386_devdesc *dev);	/* return dev_t for (dev) */
-int	bc_bios2unit(int biosdev);	/* xlate BIOS device -> bioscd unit */
-int	bc_unit2bios(int unit);		/* xlate bioscd unit -> BIOS device */
 uint32_t bd_getbigeom(int bunit);	/* return geometry in bootinfo format */
 int	bd_bios2unit(int biosdev);	/* xlate BIOS device -> biosdisk unit */
-int	bd_unit2bios(int unit);		/* xlate biosdisk unit -> BIOS device */
+int	bd_unit2bios(struct i386_devdesc *); /* xlate biosdisk -> BIOS device */
 int	bd_getdev(struct i386_devdesc *dev);	/* return dev_t for (dev) */
 
 ssize_t	i386_copyin(const void *src, vm_offset_t dest, const size_t len);
@@ -122,6 +120,11 @@ extern vm_offset_t	memtop_copyin;	/* memtop less heap size for the cases */
 					/*  just the same as memtop            */
 extern uint32_t		high_heap_size;	/* extended memory region available */
 extern vm_offset_t	high_heap_base;	/* for use as the heap */
+
+/* 16KB buffer space for real mode data transfers. */
+#define	BIO_BUFFER_SIZE 0x4000
+void *bio_alloc(size_t size);
+void bio_free(void *ptr, size_t size);
 
 /*
  * Values for width parameter to biospci_{read,write}_config
